--- a/Project/Makefile
+++ b/Project/Makefile
@@ -1,10 +1,13 @@
 .PHONY: build run clean
 
 build:
-	Build.bat
+	cmake -E make_directory $(CURDIR)/build
+	cmake -E make_directory $(CURDIR)/release
+	cmake -S . -B .\build
+	cmake --build .\build --config Release -j8
+	copy .\build\Release\run.exe .\release\run.exe
 run: build
-	Start.bat
-
+	.\build\Release\run.exe 0 0 0
 clean:
 	del /s /q build
 
