done need measurements of compression

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,10 @@ Project/opencv_world455.dll
 Project/opencv_world455d.dll
 Project/images
 Project/opencv
+Project/f
+Project/big
+Project/huge
+Project/small
+Project/release
+
 
